Instalación_de_css_js_angular

--- a/src/app/componentes/header-nav/header-nav.component.html
+++ b/src/app/componentes/header-nav/header-nav.component.html
@@ -1,1 +1,16 @@
-<p>header-nav works!</p>
+<header>
+  <details>
+    <summary>  Navegador  </summary>
+    <div class="container">
+      <p class="logo">Exito!</p>
+      <nav>
+        <a href="#somos-proya">Formación</a>
+        <a href="#conocimientos2">Proyectos</a>
+        <a href="#caracteristicas">Experiencia</a>
+        <a href="#conocimientos">Habilidades</a>
+        <a href="#skillset">Skillset</a>
+        <a href="#final">Contacto</a>
+      </nav>
+    </div>
+  </details>
+</header>
