--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,11 @@
-
-
-<!--empieza codigo a borrar-->
-
-<!--termina codigo a borrar-->
-
-<!--empieza codigo a borrar-->
-
-<!--termina codigo a borrar-->
-
-<!--empieza codigo a borrar-->
-
-<!--termina codigo a borrar-->
-
-
-
-
-
-<script
-  src="https://kit.fontawesome.com/5e138694b1.js"
-  crossorigin="anonymous"
-></script>
+<div>
+  <app-header-nav></app-header-nav>
+  <app-aside-baner></app-aside-baner>
+  <app-formacion></app-formacion>
+  <app-proyectos></app-proyectos>
+  <app-experiencia></app-experiencia>
+  <app-habilidades></app-habilidades>
+  <app-skillset></app-skillset>
+  <app-contacto></app-contacto>
+  <app-footer></app-footer>
+</div>
