--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 html::-webkit-scrollbar {
-	width: 7px;
+  width: 7px;
 }
 
 html::-webkit-scrollbar-thumb {
-	background-image: linear-gradient(62deg, #2f95fc81 0%, #a446fc 100%);
-    border-radius: 5px;
+  background-image: linear-gradient(62deg, #2f95fc81 0%, #a446fc 100%);
+  border-radius: 5px;
 }
 
-iframe  #formulario-webkit-scrollbar {
-	width: 7px;
+iframe #formulario-webkit-scrollbar {
+  width: 7px;
+}
+/*elimina sticker*/
+summary {
+  list-style: none;
 }
