--- a/src/app/componentes/aside-baner/aside-baner.component.html
+++ b/src/app/componentes/aside-baner/aside-baner.component.html
@@ -1,10 +1,10 @@
 <aside>
   <div class="barra">
-    <img id="APlogo" src="media/APLogo.png" alt="logo" />
+    <img id="APlogo" src="../../../assets/APLogo.png" alt="logo" />
   </div>
   <img
     class="circle"
-    src="media/Perfil_photo_2022-08-03_19-26-12.jpg"
+    src="../../../assets/Perfil_photo_2022-08-03_19-26-12.jpg"
     alt="logo large"
   />
 
@@ -21,7 +21,7 @@
   </p>
   <video autoplay loop muted>
     <source
-      src="media/Tu nombre - Portafolio.mp4"
+      src="../../../assets/Tu nombre - Portafolio.mp4"
       alt="https://www.xaviro.com/assets/c97fb08d9006a59b6013.mp4"
     />
   </video>
