Actualizacion_Skill_css
y puesta de iconos en Skill.

--- a/src/app/componentes/skillset/skillset.component.html
+++ b/src/app/componentes/skillset/skillset.component.html
@@ -4,32 +4,32 @@
 <section id="skillset-content">
   <div class="even">
     <div>
-      <img src="media/html-5.png" />
+      <img src="../../../assets/html-5.png" />
       <span class="tooltip">HTML</span>
       <p>HTML</p>
     </div>
     <div>
-      <img src="media/css-3.png" />
+      <img src="../../../assets/css-3.png" />
       <span class="tooltip">CSS</span>
       <p>CSS</p>
     </div>
     <div>
-      <img src="media/js.png" />
+      <img src="../../../assets/js.png" />
       <span class="tooltip">Javascript</span>
       <p>Javascript</p>
     </div>
     <div>
-      <img src="media/github.png" />
+      <img src="../../../assets/github.png" />
       <span class="tooltip">GIT</span>
       <p>GIT</p>
     </div>
     <div>
-      <img src="media/angular_logo_icon_169595.png" />
+      <img src="../../../assets/angular_logo_icon_169595.png" />
       <span class="tooltip">Angular</span>
       <p>Angular</p>
     </div>
     <div>
-      <img src="media/google_firebase_icon-icons.com_61475.png" />
+      <img src="../../../assets/google_firebase_icon-icons.com_61475.png" />
       <span class="tooltip">FireBase</span>
       <p>FireBase</p>
     </div>
@@ -39,7 +39,7 @@
       <p>neatbeanse</p>
     </div>
     <div>
-      <img src="media/mysqlworkbench_103806.png" />
+      <img src="../../../assets/mysqlworkbench_103806.png" />
       <span class="tooltip">MySql</span>
       <p>MySql</p>
     </div>
@@ -51,7 +51,7 @@
       <p>Spring</p>
     </div>
     <div>
-      <img src="media/java_original_logo_icon_146458.png" />
+      <img src="../../../assets/java_original_logo_icon_146458.png" />
       <span class="tooltip">Java</span>
       <p>Java</p>
     </div>
