--- a/src/app/componentes/habilidades/habilidades.component.html
+++ b/src/app/componentes/habilidades/habilidades.component.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="carta">
-        <h3>Conocimientos complementarios</h3>
+        <h3>Conocimientos extras</h3>
         <div class="boton-html">
           <details>
             <summary>CONTENIDO</summary>
