--- a/src/app/componentes/formacion/formacion.component.html
+++ b/src/app/componentes/formacion/formacion.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="img-container"></div>
     <div class="texto">
-      <h2>Mi formacion <span class="color-acento">VeamoYa!</span></h2>
+      <h2>Mi formacion <span class="color-acento">Veamos!</span></h2>
       <details>
         <summary>CONTENIDO</summary>
         <p>
