video_banner_ok
video banner corregido, falla en lectura de codigo html de parte de angular.

--- a/src/app/componentes/aside-baner/aside-baner.component.html
+++ b/src/app/componentes/aside-baner/aside-baner.component.html
@@ -19,7 +19,7 @@
     velit esse culpa aut iusto? Quod, distinctio quia ad ea mollitia dicta,
     provident architecto a voluptatibus reiciendis autem culpa placeat.
   </p>
-  <video autoplay loop muted>
+  <video autoplay>
     <source
       src="../../../assets/Tu nombre - Portafolio.mp4"
       alt="https://www.xaviro.com/assets/c97fb08d9006a59b6013.mp4"
