rocket_icon_nav

--- a/src/app/componentes/header-nav/header-nav.component.html
+++ b/src/app/componentes/header-nav/header-nav.component.html
@@ -4,6 +4,7 @@
     <div class="container">
       <p class="logo">Exito!</p>
       <nav>
+        <a href="#baner"><img src="../../../assets/rocket_3807.png" alt="ico"></a>
         <a href="#somos-proya">Formación</a>
         <a href="#conocimientos2">Proyectos</a>
         <a href="#caracteristicas">Experiencia</a>
