--- a/src/app/componentes/skillset/skillset.component.html
+++ b/src/app/componentes/skillset/skillset.component.html
@@ -1,4 +1,161 @@
-<section id="skillset">
+<section>
+  <div class="porcentaje">
+      <div class="container">
+          
+          <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>80<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Html</h3>
+              </div>
+          </div>
+      </div>
+      
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>30<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Css</h3>
+              </div>
+          </div>
+      </div>
+      
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>30<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Css</h3>
+              </div>
+          </div>
+      </div>
+
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>30<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Css</h3>
+              </div>
+          </div>
+      </div>
+      
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>30<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Css</h3>
+              </div>
+          </div>
+      </div>
+      
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>80<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Html</h3>
+              </div>
+          </div>
+      </div>
+      
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>30<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Css</h3>
+              </div>
+          </div>
+      </div>
+      
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>30<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Css</h3>
+              </div>
+          </div>
+      </div>
+      
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>30<span>%</span></h2>
+                  </div>
+                  <h3 class="text">Css</h3>
+              </div>
+          </div>
+      </div>
+      
+      <div class="card">
+          <div class="box">
+              <div class="porcent">
+                  <svg>
+                      <circle cx="70" cy="70" r="70"/>
+                      <circle cx="70" cy="70" r="70"/>
+                  </svg>
+                  <div class="number">
+                      <h2>60<span>%</span></h2>
+                  </div>
+                  <h3 class="text">javascript</h3>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+</section>
+<!--
+  <section id="skillset">
   <h2>Nivel por Skill</h2>
 </section>
 <section id="skillset-content">
@@ -57,3 +214,4 @@
     </div>
   </div>
 </section>
+-->
