--- a/src/app/componentes/skillset/skillset.component.css
+++ b/src/app/componentes/skillset/skillset.component.css
@@ -1,3 +1,201 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Hachi Maru Pop", cursive;
+  color: #fff;
+  
+}
+
+.porcentaje {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 98vh;
+  background-color: rgb(27, 27, 27);
+  padding: 90px 0px;
+}
+
+.container {
+  width: 860px;
+  padding: 0px;
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.container .card {
+  position: relative;
+  width: 200px;
+  background-color: rgb(175, 29, 29);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 330px;
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: center;
+  transition: 0.5s;
+  margin-top: 23px;
+}
+.container .card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 15px 35px rgba(186, 67, 255, 0.5);
+}
+
+.container .card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -50;
+  width: 200px;
+  height: 330px;
+  background: rgb(30, 30, 30);
+}
+.porcent {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow: inset 0 0 50px #fff;
+  background: rgba(97, 194, 110, 0);
+  z-index: 1000;
+}
+
+.porcent .number {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.porcent .number h2 {
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  transition: 0.5s;
+  
+}
+
+.card:hover .porcent .number h2 {
+  color: rgb(0, 0, 0);
+  font-size: 53px;
+}
+.porcent .number h2 span {
+  color: rgb(255, 255, 255);
+}
+
+.text {
+  position: relative;
+  color: rgb(255, 255, 255);
+  margin-top: 20px;
+  font-weight: 700;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+
+svg {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transform: rotate(-85deg) !important;
+}
+
+svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #e79595a2;
+  stroke-width: 10;
+  stroke-linecap: round !important;
+  transform: translate(5px, 5px);
+}
+
+/*Claculo para simular el porcent*/
+svg circle:nth-child(2) {
+  stroke-dasharray: 440;
+  stroke-dashoffset: 440;
+}
+
+.card:nth-child(1) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 80) / 100);
+  stroke: rgb(255, 0, 0);
+}
+.card:nth-child(2) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 30) / 100);
+  stroke: rgb(255, 217, 0);
+}
+.card:nth-child(3) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 30) / 100);
+  stroke: rgb(217, 255, 0);
+}
+.card:nth-child(4) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 30) / 100);
+  stroke: rgb(0, 255, 0);
+}
+.card:nth-child(5) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 30) / 100);
+  stroke: rgb(0, 255, 157);
+}
+.card:nth-child(6) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 80) / 100);
+  stroke: rgb(0, 140, 255);
+}
+.card:nth-child(7) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 30) / 100);
+  stroke: rgb(255, 251, 0);
+}
+.card:nth-child(8) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 30) / 100);
+  stroke: rgb(4, 0, 255);
+}
+.card:nth-child(9) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 30) / 100);
+  stroke: rgb(119, 0, 255);
+}
+.card:nth-child(10) svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 60) / 100);
+  stroke: rgb(247, 0, 255);
+}
+@media only screen and (max-width: 600px) {
+  .porcentaje {
+    height: auto;
+    margin-left: 0px;
+    flex-flow: row wrap;
+  }
+}
+
+@media screen and(max-width: 1068px) {
+  .container {
+    max-width: 80rem;
+    min-width: 70rem;
+  }
+}
+
+@media screen and (max-width: 868px) {
+  .container {
+    max-width: 80rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 2.rem;
+    flex-direction: none;
+    margin-top: 20px;
+  }
+}
+
+/*
 #skillset {
     background-color: #fa8bff;
     background-image: linear-gradient(
@@ -62,3 +260,4 @@
     border-radius: 5px;
     margin-top: 1vh;
   }
+  */
