--- a/src/app/componentes/header-nav/header-nav.component.html
+++ b/src/app/componentes/header-nav/header-nav.component.html
@@ -9,7 +9,7 @@
         <a href="#conocimientos2">Proyectos</a>
         <a href="#caracteristicas">Experiencia</a>
         <a href="#conocimientos">Habilidades</a>
-        <a href="#skillset">Skillset</a>
+        <a href="#skill">Skillset</a>
         <a href="#final">Contacto</a>
       </nav>
     </div>
