--- a/src/app/componentes/habilidades/habilidades.component.html
+++ b/src/app/componentes/habilidades/habilidades.component.html
@@ -1,6 +1,6 @@
 <section id="conocimientos">
   <div class="container">
-    <h2>Habilidades y Capacidades</h2>
+    <h2><span>Habilidades</span> y <span>Capacidades</span></h2>
     <div class="programas">
       <div class="carta">
         <h3>Programacion Front-end</h3>
