--- a/src/app/componentes/skillset/skillset.component.css
+++ b/src/app/componentes/skillset/skillset.component.css
@@ -1,4 +1,34 @@
-* {
+#skill h1{
+  padding-top: 1em;
+  background: rgb(27, 27, 27);
+  font-size: 40px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: bold;
+  transition: .5 linear;
+}
+#skill h1 span{
+  font-size: 40px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: bold;
+  transition: .5 linear;
+}
+#skill h1:hover span:nth-child(1){
+  margin-right: 5px;
+}
+#skill h1:hover span:nth-child(2){
+  margin-left: 30px;
+}
+#skill h1:hover span{
+  color: white;
+  text-shadow: 0 0 10px white,
+  0 0 20px white,
+  0 0 40px white;
+}
+/*graficos*/
+*{
+  margin: 0;
+}
+.porcentaje {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
