--- a/src/app/componentes/skillset/skillset.component.html
+++ b/src/app/componentes/skillset/skillset.component.html
@@ -1,9 +1,17 @@
 <section>
+
+  <div id="skill">
+    <h1>
+      <span>S</span>KILL<span>SET</span>
+    </h1>
+  </div> 
+
   <div class="porcentaje">
       <div class="container">
           
           <div class="card">
           <div class="box">
+              
               <div class="porcent">
                   <svg>
                       <circle cx="70" cy="70" r="70"/>
