--- a/src/app/componentes/header-nav/header-nav.component.css
+++ b/src/app/componentes/header-nav/header-nav.component.css
@@ -1,7 +1,7 @@
 header {
     position: fixed;
-    background-color: #8ec5fc;
-    background-image: linear-gradient(62deg, #8ec5fc81 0%, #e0c3fc 100%);
+    background-color: rgb(230, 175, 24);
+    background-image: linear-gradient(62deg, rgb(27, 27, 27) 0%, rgb(27, 27, 27));
     border-radius: 5px;
   }
   
@@ -19,7 +19,9 @@ header {
     align-items: center;
     width: none;
   }
-  
+  summary{
+    color: blueviolet;
+  }
   header nav {
     display: flex;
     flex-direction: column;
@@ -31,7 +33,7 @@ header {
     padding: 5px 12px;
     text-decoration: none;
     font-weight: bold;
-    color: rgb(0, 0, 0);
+    color: rgb(230, 175, 24);
   }
   
   header a:hover {
