--- a/src/app/componentes/skillset/skillset.component.html
+++ b/src/app/componentes/skillset/skillset.component.html
@@ -18,7 +18,7 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>80<span>%</span></h2>
+                    <img src="../../../assets/html-5.png" />
                   </div>
                   <h3 class="text">Html</h3>
               </div>
@@ -33,7 +33,7 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>30<span>%</span></h2>
+                    <img src="../../../assets/css-3.png" />
                   </div>
                   <h3 class="text">Css</h3>
               </div>
@@ -48,9 +48,9 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>30<span>%</span></h2>
+                    <img src="../../../assets/js.png" />
                   </div>
-                  <h3 class="text">Css</h3>
+                  <h3 class="text">Javascript</h3>
               </div>
           </div>
       </div>
@@ -63,9 +63,9 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>30<span>%</span></h2>
+                    <img src="../../../assets/github.png" />
                   </div>
-                  <h3 class="text">Css</h3>
+                  <h3 class="text">GIT</h3>
               </div>
           </div>
       </div>
@@ -78,9 +78,9 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>30<span>%</span></h2>
+                      <img src="../../../assets/angular_logo_icon_169595.png" />
                   </div>
-                  <h3 class="text">Css</h3>
+                  <h3 class="text">Angular</h3>
               </div>
           </div>
       </div>
@@ -93,9 +93,9 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>80<span>%</span></h2>
+                    <img src="../../../assets/google_firebase_icon-icons.com_61475.png" />
                   </div>
-                  <h3 class="text">Html</h3>
+                  <h3 class="text">FireBase</h3>
               </div>
           </div>
       </div>
@@ -108,9 +108,9 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>30<span>%</span></h2>
+                    <img src="https://netbeans.apache.org/images/apache-netbeans.svg" />
                   </div>
-                  <h3 class="text">Css</h3>
+                  <h3 class="text">neatbeanse</h3>
               </div>
           </div>
       </div>
@@ -123,9 +123,9 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>30<span>%</span></h2>
+                    <img src="../../../assets/mysqlworkbench_103806.png" />
                   </div>
-                  <h3 class="text">Css</h3>
+                  <h3 class="text">MySql</h3>
               </div>
           </div>
       </div>
@@ -138,9 +138,9 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>30<span>%</span></h2>
+                    <img src="../../../assets/spring-3-logo-transpa.png" />
                   </div>
-                  <h3 class="text">Css</h3>
+                  <h3 class="text">Spring</h3>
               </div>
           </div>
       </div>
@@ -153,9 +153,9 @@
                       <circle cx="70" cy="70" r="70"/>
                   </svg>
                   <div class="number">
-                      <h2>60<span>%</span></h2>
+                    <img src="../../../assets/java_original_logo_icon_146458.png" />
                   </div>
-                  <h3 class="text">javascript</h3>
+                  <h3 class="text">java</h3>
               </div>
           </div>
       </div>
