correccion_de_fallas_multiples

--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -1,3 +1,4 @@
+<!--
 <section id="caracteristicas">
   <div class="container">
     <ul>
@@ -6,5 +7,23 @@
       <li>✔️ Soporte 1:1</li>
       <li>✔️ Asistencia financiera</li>
     </ul>
+  </div>
+</section>
+-->
+<section id="somos-proya">
+  <div class="container">
+    <div class="img-container"></div>
+    <div class="texto">
+      <h2>Mi formacion <span class="color-acento">Veamos!</span></h2>
+      <details>
+        <summary>CONTENIDO</summary>
+        <ul>
+          <li>✔️ 100% online</li>
+          <li>✔️ Flexibilidad de horarios</li>
+          <li>✔️ Soporte 1:1</li>
+          <li>✔️ Asistencia financiera</li>
+        </ul>
+      </details>
+    </div>
   </div>
 </section>
