--- a/src/app/componentes/formacion/formacion.component.css
+++ b/src/app/componentes/formacion/formacion.component.css
@@ -3,7 +3,7 @@
   padding: 200px 12px;
 }
 #somos-proya {
-  background-color: #ebf3f5;
+  background-color: #2b2b2b;
 }
 @media (min-width: 800px) {
   #somos-proya .container {
