--- a/src/app/componentes/header-nav/header-nav.component.html
+++ b/src/app/componentes/header-nav/header-nav.component.html
@@ -4,13 +4,17 @@
     <div class="container">
       <p class="logo">Exito!</p>
       <nav>
-        <a href="#baner"><img src="../../../assets/rocket_3807.png" alt="ico"></a>
+        <!--
+          <a href="#baner"><img src="../../../assets/rocket_3807.png" alt="ico"></a>
+          <input class="btn btn-primary" type="button" value="Input">
+        -->
         <a href="#somos-proya">Formación</a>
         <a href="#conocimientos2">Proyectos</a>
         <a href="#caracteristicas">Experiencia</a>
         <a href="#skill">Skillset</a>
         <a href="#conocimientos">Habilidades</a>
         <a href="#final">Contacto</a>
+        <button class="btn btn-outline-light" type="button">Login</button>
       </nav>
     </div>
   </details>
