--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,6 +1,6 @@
 <section id="conocimientos2">
   <div class="container2">
-    <h2>Mis proyectos</h2>
+    <h1>PROYECTOS</h1>
     <div class="programas2">
       <div class="carta2">
         <h3>Programacion Front-end</h3>
