--- a/src/app/componentes/experiencia/experiencia.component.css
+++ b/src/app/componentes/experiencia/experiencia.component.css
@@ -1,3 +1,4 @@
+/*
 #caracteristicas {
   background-color: rgba(255, 255, 255, 0);
 }
@@ -5,6 +6,7 @@
 #caracteristicas .container {
   text-align: center;
   padding: 250px 12px;
+  background-color: #2b2b2b;
 }
 
 #caracteristicas li {
@@ -17,6 +19,7 @@
         background-repeat: no-repeat;
         background-size: 500px 400px;
         background-position: calc(100vw - 500px) 120px;
+        z-index: 3;
       }    
 }
 @media (min-width: 800px) {
@@ -33,5 +36,42 @@
 @media (min-width: 1200px) {
   #caracteristicas {
     background-position-x: calc(100vw - 800px);
+  }
+}
+*/
+#somos-proya .container {
+  text-align: center;
+  padding: 200px 12px;
+}
+#somos-proya {
+  background-color: #2b2b2b;
+}
+@media (min-width: 800px) {
+  #somos-proya .container {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+  }
+
+  #somos-proya .texto {
+    width: 50%;
+    max-width: 600px;
+    text-align: initial;
+    padding-left: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #somos-proya h2 {
+    margin-top: 0px;
+  }
+
+  #somos-proya .img-container {
+    background-image: url("../../../assets/background-2.jpeg");
+    background-size: cover;
+    background-position: center center;
+    height: 500px;
+    width: 400px;
   }
 }
