--- a/src/app/componentes/habilidades/habilidades.component.css
+++ b/src/app/componentes/habilidades/habilidades.component.css
@@ -1,5 +1,5 @@
 #conocimientos {
-  background-color: rgb(255, 255, 255);
+  background-color: #2b2b2b;
   color: white;
   text-align: center center;
   display: flex;
@@ -7,7 +7,7 @@
 }
 
 #conocimientos h2{
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: bold;
 }
@@ -37,6 +37,7 @@
 #conocimientos .carta {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   }
+/*brillo TERMINA*/
 .carta {
   margin: 5% 1%;
   border-radius: 5px;
@@ -87,6 +88,17 @@
   margin-top: 1vh;
 }
 @media (min-width: 800px) {
+  #conocimientos .container {
+    padding: 150px 12px;
+    width: 80%;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-around;
+  }
+  #conocimientos .carta {
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    }
   #conocimientos .programas {
     display: flex;
     justify-content: space-between;
