--- a/src/app/componentes/header-nav/header-nav.component.css
+++ b/src/app/componentes/header-nav/header-nav.component.css
@@ -1,62 +1,71 @@
 header {
+  position: fixed;
+  background-color: #4158d0;
+  background-image: linear-gradient(
+    43deg,
+    #4159d0a1 0%,
+    #c850c0a1 46%,
+    #ffcd70a1 100%
+  );
+
+  border-radius: 5px;
+}
+
+header .logo {
+  margin: 0;
+  padding: 25px 30px;
+  font-weight: bold;
+  color: blueviolet;
+  font-size: 1.6em;
+}
+
+header .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: none;
+}
+summary {
+  color: rgb(255, 255, 255);
+}
+details{
+  cursor: pointer;
+}
+header nav {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+header a {
+  padding: 5px 12px;
+  text-decoration: none;
+  font-weight: bold;
+  color: rgb(179, 179, 179);
+}
+
+header a:hover {
+  color: blueviolet;
+}
+
+@media (min-width: 800px) {
+  header {
     position: fixed;
-    background-color: rgb(230, 175, 24);
-    background-image: linear-gradient(62deg, rgb(27, 27, 27) 0%, rgb(27, 27, 27));
-    border-radius: 5px;
-  }
-  
-  header .logo {
-    margin: 0;
-    padding: 25px 30px;
-    font-weight: bold;
-    color: blueviolet;
-    font-size: 1.6em;
-  }
-  
-  header .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: none;
-  }
-  summary{
-    color: blueviolet;
-  }
-  header nav {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-bottom: 25px;
-  }
-  
-  header a {
-    padding: 5px 12px;
-    text-decoration: none;
-    font-weight: bold;
-    color: rgb(230, 175, 24);
-  }
-  
-  header a:hover {
-    color: blueviolet;
+    width: 100%;
+    background-color: rgb(52, 54, 52);
   }
 
-  @media (min-width: 800px) {
-    header {
-      position: fixed;
-      width: 100%;
-      background-color: rgba(52, 54, 52, 0.705);
-    }
-  
-    header .container {
-      flex-direction: row;
-      justify-content: space-between;
-      height: 10vh;
-      width: cover;
-    }
-  
-    header nav {
-      flex-direction: row;
-      padding-bottom: 0;
-      padding-right: 20px;
-    }
+  header .container {
+    flex-direction: row;
+    justify-content: space-between;
+    height: 10vh;
+    width: cover;
+  }
+
+  header nav {
+    flex-direction: row;
+    padding-bottom: 0;
+    padding-right: 20px;
+  }
 }
