--- a/src/app/componentes/proyectos/proyectos.component.css
+++ b/src/app/componentes/proyectos/proyectos.component.css
@@ -1,3 +1,25 @@
+/*brillo*/
+
+h1 {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 10px;
+  font-size: 40px;
+}
+h1:hover{
+  padding-top: 10px;
+  color: white;
+  text-shadow: 0 0 10px white,
+  0 0 20px white,
+  0 0 40px white;
+}
+h1 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    color: rgb(88, 88, 88);
+  }
+/*brillo TERMINA*/
+
 #conocimientos2 {
   background-color: rgb(30, 30, 30);
   color: white;
