--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -10,7 +10,7 @@
   </div>
 </section>
 -->
-<section id="somos-proya">
+<section id="experiencia">
   <div class="container">
     <div class="img-container"></div>
     <div class="texto">
