--- a/src/app/componentes/header-nav/header-nav.component.html
+++ b/src/app/componentes/header-nav/header-nav.component.html
@@ -10,7 +10,7 @@
         -->
         <a href="#somos-proya">Formación</a>
         <a href="#conocimientos2">Proyectos</a>
-        <a href="#caracteristicas">Experiencia</a>
+        <a href="#experiencia">Experiencia</a>
         <a href="#skill">Skillset</a>
         <a href="#conocimientos">Habilidades</a>
         <a href="#final">Contacto</a>
