--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -14,16 +14,16 @@
   <div class="container">
     <div class="img-container"></div>
     <div class="texto">
-      <h2>Mi formacion <span class="color-acento">Veamos!</span></h2>
-      <details>
-        <summary>CONTENIDO</summary>
+      <h2>Mi experiencia <span class="color-acento">Laboral!</span></h2>
+      <!---<details>
+        <summary>CONTENIDO</summary>-->
         <ul>
           <li>✔️ 100% online</li>
           <li>✔️ Flexibilidad de horarios</li>
           <li>✔️ Soporte 1:1</li>
           <li>✔️ Asistencia financiera</li>
         </ul>
-      </details>
+      <!---</details>-->
     </div>
   </div>
 </section>
