implementación_del_backend
implementación de clase persona y comienzo del login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<div>
-  <app-header-nav></app-header-nav>
-  <app-aside-baner></app-aside-baner>
-  <app-formacion></app-formacion>
-  <app-proyectos></app-proyectos>
-  <app-experiencia></app-experiencia>
-  <app-skillset></app-skillset>
-  <app-habilidades></app-habilidades>
-  <app-contacto></app-contacto>
-  <app-footer></app-footer>
-</div>
+<router-outlet></router-outlet>
