--- a/src/app/componentes/aside-baner/aside-baner.component.html
+++ b/src/app/componentes/aside-baner/aside-baner.component.html
@@ -8,7 +8,7 @@
     alt="logo large"
   />
 
-  <h1>Aquino Ernesto</h1>
+  <h1 id="nombre">{{persona.apellido}} {{persona.nombre}} </h1>
   <hr />
   <div>
     <h2>Desarrollador Full Stack Web Junior</h2>
