--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,1 +1,171 @@
-<p>login works!</p>
+<!-- Section: Design Block -->
+<section class="text-center text-lg-start" class="background-radial-gradient overflow-hidden">
+  <style>
+    .cascading-right {
+      margin-right: -50px;
+    }
+    .background-radial-gradient {
+      background-color: hsl(218, 41%, 15%);
+      background-image: radial-gradient(
+          650px circle at 0% 0%,
+          hsl(218, 41%, 35%) 15%,
+          hsl(218, 41%, 30%) 35%,
+          hsl(218, 41%, 20%) 75%,
+          hsl(218, 41%, 19%) 80%,
+          transparent 100%
+        ),
+        radial-gradient(
+          1250px circle at 100% 100%,
+          hsl(218, 41%, 45%) 15%,
+          hsl(218, 41%, 30%) 35%,
+          hsl(218, 41%, 20%) 75%,
+          hsl(218, 41%, 19%) 80%,
+          transparent 100%
+        );
+    }
+
+    @media (max-width: 991.98px) {
+      .cascading-right {
+        margin-right: 0;
+      }
+    }
+  </style>
+
+  <!-- Jumbotron -->
+  <div class="container py-4">
+    <div class="row g-0 align-items-center">
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <div
+          class="card cascading-right"
+          style="
+            background: hsla(0, 0%, 100%, 0.55);
+            backdrop-filter: blur(30px);
+          "
+        >
+          <div class="card-body p-5 shadow-5 text-center">
+            <h2 class="fw-bold mb-5">Regístrese ahora</h2>
+            <form>
+              <!-- 2 column grid layout with text inputs for the first and last names -->
+              <div class="row">
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <input
+                      type="text"
+                      id="form3Example1"
+                      class="form-control"
+                    />
+                    <label class="form-label" for="form3Example1"
+                      >Nombre</label
+                    >
+                  </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <input
+                      type="text"
+                      id="form3Example2"
+                      class="form-control"
+                    />
+                    <label class="form-label" for="form3Example2"
+                      >Apellido</label
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <!-- Email input -->
+              <div class="form-outline mb-4">
+                <input type="email" id="form3Example3" class="form-control" />
+                <label class="form-label" for="form3Example3"
+                  >Dirección de correo electrónico</label
+                >
+              </div>
+
+              <!-- Password input -->
+              <div class="form-outline mb-4">
+                <input
+                  type="password"
+                  id="form3Example4"
+                  class="form-control"
+                />
+                <label class="form-label" for="form3Example4">Contraseña</label>
+              </div>
+
+              <!-- Checkbox --k>
+              <div class="form-check d-flex justify-content-center mb-4">
+                <input
+                  class="form-check-input me-2"
+                  type="checkbox"
+                  value=""
+                  id="form2Example33"
+                  checked
+                />
+                <label class="form-check-label" for="form2Example33">
+                    Quieres ser administrador
+                </label>
+              </div>
+
+              <!k-- Submit button --k>
+              <button type="submit" class="btn btn-primary btn-block mb-4">
+                unete
+              </button>
+
+              <!k-- Register buttons --k>
+              <div class="text-center">
+                <p>o regístrate con:</p>
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-facebook-f"></i>
+                </button>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-google"></i>
+                </button>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-twitter"></i>
+                </button>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-github"></i>
+                </button>
+              </div>
+                -->
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <img
+          src="https://mdbootstrap.com/img/new/ecommerce/vertical/004.jpg"
+          class="w-100 rounded-4 shadow-4"
+          alt=""
+        />
+      </div>
+    </div>
+  </div>
+  <!-- Jumbotron -->
+</section>
+<!-- Section: Design Block -->
+<!--
+    <section class="form-main">
+  <div class="form-conte">
+    <div class="box">
+      <h3>Bienvenido</h3>
+      <form action="">
+        <div class="input-box">
+          <input type="text" placeholder="Email" class="input-control" />
+        </div>
+        <div class="input-box">
+          <input type="password" placeholder="password" class="input-control" />
+          <div class="input-link">
+            <a href="#" class="gradient-text">Has olvidado tu contraseña</a>
+          </div>
+        </div>
+        <button type="submit" class="btn">Iniciar Sesión</button>
+      </form>
+      <p>No tienes una cuenta? <a href="#"></a></p>
+    </div>
+  </div>
+</section>
+-->
