--- a/src/app/componentes/header-nav/header-nav.component.html
+++ b/src/app/componentes/header-nav/header-nav.component.html
@@ -14,7 +14,7 @@
         <a href="#skill">Skillset</a>
         <a href="#conocimientos">Habilidades</a>
         <a href="#final">Contacto</a>
-        <button class="btn btn-outline-light" type="button">Login</button>
+        <button class="btn btn-outline-light" type="button" (click)="login()">Login</button>
       </nav>
     </div>
   </details>
