compo_login_Ogue

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,37 +1,9 @@
-<!-- Section: Design Block -->
-<section class="text-center text-lg-start" class="background-radial-gradient overflow-hidden">
-  <style>
-    .cascading-right {
-      margin-right: -50px;
-    }
-    .background-radial-gradient {
-      background-color: hsl(218, 41%, 15%);
-      background-image: radial-gradient(
-          650px circle at 0% 0%,
-          hsl(218, 41%, 35%) 15%,
-          hsl(218, 41%, 30%) 35%,
-          hsl(218, 41%, 20%) 75%,
-          hsl(218, 41%, 19%) 80%,
-          transparent 100%
-        ),
-        radial-gradient(
-          1250px circle at 100% 100%,
-          hsl(218, 41%, 45%) 15%,
-          hsl(218, 41%, 30%) 35%,
-          hsl(218, 41%, 20%) 75%,
-          hsl(218, 41%, 19%) 80%,
-          transparent 100%
-        );
-    }
-
-    @media (max-width: 991.98px) {
-      .cascading-right {
-        margin-right: 0;
-      }
-    }
-  </style>
-
-  <!-- Jumbotron -->
+<!-- Section: Design Block --k>
+<section
+  class="text-center text-lg-start"
+  class="background-radial-gradient overflow-hidden"
+>
+  <!k-- Jumbotron --k>
   <div class="container py-4">
     <div class="row g-0 align-items-center">
       <div class="col-lg-6 mb-5 mb-lg-0">
@@ -44,8 +16,10 @@
         >
           <div class="card-body p-5 shadow-5 text-center">
             <h2 class="fw-bold mb-5">Regístrese ahora</h2>
-            <form>
-              <!-- 2 column grid layout with text inputs for the first and last names -->
+            
+            <form><!k--3;12(15)--k>
+
+              <!k-- 2 column grid layout with text inputs for the first and last names --k>
               <div class="row">
                 <div class="col-md-6 mb-4">
                   <div class="form-outline">
@@ -54,9 +28,7 @@
                       id="form3Example1"
                       class="form-control"
                     />
-                    <label class="form-label" for="form3Example1"
-                      >Nombre</label
-                    >
+                    <label class="form-label" for="form3Example1">Nombre</label>
                   </div>
                 </div>
                 <div class="col-md-6 mb-4">
@@ -73,7 +45,7 @@
                 </div>
               </div>
 
-              <!-- Email input -->
+              <!k-- Email input --k>
               <div class="form-outline mb-4">
                 <input type="email" id="form3Example3" class="form-control" />
                 <label class="form-label" for="form3Example3"
@@ -81,7 +53,7 @@
                 >
               </div>
 
-              <!-- Password input -->
+              <!k-- Password input --k>
               <div class="form-outline mb-4">
                 <input
                   type="password"
@@ -91,7 +63,7 @@
                 <label class="form-label" for="form3Example4">Contraseña</label>
               </div>
 
-              <!-- Checkbox --k>
+              <!k-- Checkbox --k>
               <div class="form-check d-flex justify-content-center mb-4">
                 <input
                   class="form-check-input me-2"
@@ -101,16 +73,18 @@
                   checked
                 />
                 <label class="form-check-label" for="form2Example33">
-                    Quieres ser administrador
+                  Quieres ser administrador
                 </label>
               </div>
 
               <!k-- Submit button --k>
               <button type="submit" class="btn btn-primary btn-block mb-4">
-                unete
+                ingresar
               </button>
 
-              <!k-- Register buttons --k>
+            </form>
+
+            <!k-- Register buttons --k>
               <div class="text-center">
                 <p>o regístrate con:</p>
                 <button type="button" class="btn btn-link btn-floating mx-1">
@@ -129,8 +103,8 @@
                   <i class="fab fa-github"></i>
                 </button>
               </div>
-                -->
-            </form>
+                
+            </form>--k>
           </div>
         </div>
       </div>
@@ -144,10 +118,10 @@
       </div>
     </div>
   </div>
-  <!-- Jumbotron -->
+  <!k-- Jumbotron --k>
 </section>
-<!-- Section: Design Block -->
-<!--
+<!k-- Section: Design Block --k>
+<!k--
     <section class="form-main">
   <div class="form-conte">
     <div class="box">
